--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <link rel="stylesheet" type="text/css" href="css/tasks.css">
+</head>
 <body>
 <div>Hello To The Page</div>
 
@@ -9,6 +12,6 @@
     <div id=local-state></div>
 </div>
 
-<script src='js/main.js' type='text/javascript'></script>
+    <script src='js/main.js' type='text/javascript'></script>
 </body>
 </html>
