--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="css/tasks.css">
+    <link rel="stylesheet" type="text/css" href="css/material.min.inc.css">
 </head>
 <body>
 <div>Hello To The Page</div>
@@ -10,6 +11,7 @@
 <div class=example>
     <div class=example-title>Local state</div>
     <div id=local-state></div>
+    <div id="button-example"></div>
 </div>
 
     <script src='js/main.js' type='text/javascript'></script>
