Use cljs-react-material-ui

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,6 +12,8 @@
     <div class=example-title>Local state</div>
     <div id=local-state></div>
     <div id="button-example"></div>
+    <div id="material-ui-example"></div>
+
 </div>
 
     <script src='js/main.js' type='text/javascript'></script>
